erweiterung des systems

--- a/sensor-api/Dockerfile
+++ b/sensor-api/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:bullseye
 
-RUN pip install RPI.GPIO relay
+RUN pip install RPI.GPIO dht11 smbus paho-mqtt
 
 WORKDIR /usr/src/app
-
-COPY relay.py .
