--- a/system-monitoring/prometheus/prometheus.yaml
+++ b/system-monitoring/prometheus/prometheus.yaml
@@ -44,4 +44,9 @@ scrape_configs:
         - '10.5.61.228:9100'
         - '10.5.61.229:9100'
         - '10.5.61.230:9100'
+  - job_name: 'sensor-api'
+    metrics_path: /metrics
+    static_configs:
+      - targets:
+        - '172.17.0.1:8080'
  
