--- a/sensor-api/docker-compose.yaml
+++ b/sensor-api/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: "3.8"
 services:
   air-sensor:
     build:
@@ -9,7 +10,7 @@ services:
       - ./distance_sensor.py:/usr/src/app/distance_sensor.py
     command: python -u main.py
 
-    led-matrix:
+  led-matrix:
     build:
       context: .
     privileged: true
@@ -29,6 +30,9 @@ services:
       - ./light_sensor.py:/usr/src/app/light_sensor.py
       - ./webserver.py:/usr/src/app/webserver.py
       - ./distance_sensor.py:/usr/src/app/distance_sensor.py
+    environment:
+      - MQTT_BROKER_HOST=${MQTT_BROKER_HOST:-192.168.1.129}
+      - MQTT_BROKER_PORT=${MQTT_BROKER_PORT:-1883}
     ports:
-      - 8080:8080
+      - "8080:8080"
     command: python -u webserver.py
