Provision Grafana light dashboard and datasource

--- a/system-monitoring/docker-compose.yaml
+++ b/system-monitoring/docker-compose.yaml
@@ -52,8 +52,11 @@ services:
     image: grafana/grafana
     environment:
       - GF_SECURITY_ADMIN_USER=admin
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
     volumes:
       - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
     ports:
       - 3000:3000
     restart: always
